add publishing configurations